--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <script src="adSense.js"></script>
+    
     <title>Aquapark.io Unblocked - ubg235 GameDistribution</title>
 	<meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
